--- a/src/components/add-cell.css
+++ b/src/components/add-cell.css
@@ -6,6 +6,9 @@
 .add-cell:hover {
   opacity: 1;
 }
+.add-cell.force-visible {
+  opacity: 1;
+}
 .add-cell .divider {
   position: absolute;
   top: 50%;
